# telexide

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yaml
examples/: image_spam_bot.rs  ping_bot.rs  repeat_image_bot.rs  upload_image_bot.rs
examples/ping_bot/: Cargo.toml
examples/ping_bot/src/: main.rs
examples/repeat_image/: Cargo.toml
examples/repeat_image/src/: main.rs
examples/upload_image/: Cargo.toml
examples/upload_image/src/: main.rs
examples/webhook_bot/: Cargo.toml  nginx.conf
examples/webhook_bot/src/: main.rs
scripts/: build_examples.sh
src/: lib.rs
src/api/: api.rs  api_client.rs  endpoints.rs  mod.rs  response.rs
src/api/types/: bot.rs  chat.rs  commands.rs  edit_messages.rs  forum.rs  games.rs  inline.rs  input_media.rs  messages.rs  mod.rs  other.rs  passport.rs  payments.rs  send_messages.rs  stickers.rs  updates.rs  webhooks.rs
src/client/: builder.rs  client.rs  context.rs  event_handlers.rs  mod.rs  stream.rs  webhook_handling.rs
src/framework/: framework.rs  handlers.rs  mod.rs  types.rs
src/model/: chat.rs  commands.rs  games.rs  inline.rs  inline_mode.rs  markup.rs  message.rs  message_contents.rs  message_entity.rs  mod.rs  other.rs  payments.rs  raw.rs  stickers.rs  telegram_passport.rs  update.rs  user.rs
src/model/utils/: mod.rs  text.rs  unix_date_formatting.rs
src/utils/: form_data.rs  macros.rs  mod.rs  raw_cmd.rs  result.rs
subscription_macros/: Cargo.toml
subscription_macros/src/: lib.rs  structs.rs  utils.rs
telexide_proc_macros/: Cargo.toml
telexide_proc_macros/src/: lib.rs  structs.rs  utils.rs
tests/: client.rs  macros.rs  types.rs  webhook.rs
