[package]
name = "telexide"
version = "0.1.6"
description = "An async Rust library for the telegram bot API."
documentation = "https://docs.rs/telexide"
repository = "https://github.com/callieve/telexide"
homepage = "https://github.com/callieve/telexide"
keywords = ["telegram", "api", "bot"]
license-file = "LICENSE.md"
readme = "README.md"
authors = ["Callidus <callidusumbra@gmail.com>"]
edition = "2018"

[dependencies.telexide_proc_macros]
path = "./telexide_proc_macros"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hyper = { version = "0.14", features = ["http2", "client", "server"] }
hyper-tls = "0.5"
tokio = { version = "1.3", features = ["rt", "net", "time", "macros", "sync", "signal", "rt-multi-thread"] }
http = "^0.2.3"
async-trait = "0.1"
futures = "^0.3.13"
typemap = "0.3"
parking_lot = "0.11"
paste = "1.0"
log = "0.4"
