[package]
name = "subscription_macros"
version = "0.1.0"
authors = ["Callidus <callidusumbra@gmail.com>"]
edition = "2018"
description = "macros for subscribing to update events for telegram-botoxide"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "^1.0"