[package]
name = "telexide_proc_macros"
version = "0.1.1"
authors = ["Callidus <callidusumbra@gmail.com>"]
edition = "2021"
description = "macros for subscribing to events in telexide"
license = "MIT"
repository = "https://github.com/callieve/telexide"
homepage = "https://github.com/callieve/telexide"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "^1.0"
